--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -38,6 +38,7 @@
             <div class="season-selector">
                 <span class="season-label">SEASON:</span>
                 <select id="seasonSelect" onchange="showSeasonData(this.value)">
+                    <option value="2025">2025</option>
                     <option value="2024">2024</option>
                     <option value="2023">2023</option>
                 </select>
@@ -61,8 +62,8 @@
                             </tr>
                         </thead>
                         <tbody id="playerTableBody">
-                            {% for index, row in season_data['2024'].iterrows() %}
-                            <tr class="season-data" data-season="2024">
+                            {% for index, row in season_data['2025'].iterrows() %}
+                            <tr class="season-data" data-season="2025">
                                 <td>{{ row['Player'] }}</td>
                                 <td>{{ row['Team'] }}</td>
                                 <td>{{ row['Season'] }}</td>
@@ -77,6 +78,20 @@
                             {% endfor %}
                             {% for index, row in season_data['2023'].iterrows() %}
                             <tr class="season-data" data-season="2023" style="display: none;">
+                                <td>{{ row['Player'] }}</td>
+                                <td>{{ row['Team'] }}</td>
+                                <td>{{ row['Season'] }}</td>
+                                <td>{{ row['PPG'] }}</td>
+                                <td>{{ row['aTS%'] }}</td>
+                                <td>{{ row['TS%'] }}</td>
+                                <td>{{ row['DIFF'] }}</td>
+                                <td>{{ row['Usage Rate'] }}</td>
+                                <td>{{ row['Team 3PT%'] }}</td>
+                                <td>{{ row['Team 3PA'] }}</td>
+                            </tr>
+                            {% endfor %}
+                            {% for index, row in season_data['2024'].iterrows() %}
+                            <tr class="season-data" data-season="2024" style="display: none;">
                                 <td>{{ row['Player'] }}</td>
                                 <td>{{ row['Team'] }}</td>
                                 <td>{{ row['Season'] }}</td>
@@ -234,7 +249,7 @@
         // Show the default page (Data) when the page loads
         window.onload = function () {
             showPage("dataPage");
-            showSeasonData("2024"); // Show 2024 season by default
+            showSeasonData("2025"); // Show 2025 season by default
         };
     </script>
 </body>
